tests/NormalTests/paczka1/fuzzy1/43254190.err
Error in line 3: UrLZL7iiUZ S8 83,2
Error in line 14: UrLZL7iiUZ S8 84,1
Error in line 25: UrLZL7iiUZ A551 79,6
Error in line 28: hkTNxynHL S8 32,3
